<resources>
    <string name="app_name">My BMI Calculator</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="calc">CALCULATE</string>
    <string name="RD">RESET DATA</string>
    <string name="date">Last Calculated Date: </string>
    <string name="BMI">Last Calculated BMI: </string>
    <string name="outcome">Outcome </string>

</resources>
