<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/weight"
         />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/height"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCalc"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/calc" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/RD" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <TextView
        android:id="@+id/textViewBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BMI" />
    <TextView
        android:id="@+id/textViewOutcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outcome" />
</LinearLayout>

